[package]
name = "prometheus-license-exporter"
version = "1.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
fern = "0.6.1"
getopts = "0.2.21"
lazy_static = "1.4.0"
log = "0.4.17"
prometheus = { version = "0.13.1", features = ["process"] }
quick-xml = "0.23.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "native-tls"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"
simple-error = "0.2.3"
tokio = { version = "1.20.1", features = ["full"] }
warp = "0.3.2"
